--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["bno1"]
 
 [dependencies]
+regex = "*"
 
 [[bin]]
 name = "day01"
@@ -28,3 +29,7 @@ path = "src/day05.rs"
 [[bin]]
 name = "day06"
 path = "src/day06.rs"
+
+[[bin]]
+name = "day07"
+path = "src/day07.rs"
